--- a/app-server/src/main/webapp/css/common.css
+++ b/app-server/src/main/webapp/css/common.css
@@ -177,7 +177,7 @@ header a {
 .template-wrap .template-top {
   width: 1200px;
   margin: 0 auto;
-  padding: 20px 0 20px 50px;
+  padding: 20px 0 20px 0;
   font-weight: bold;
   background-color: rgb(247, 231, 215);
   text-align: center;
