--- a/app-server/src/main/webapp/css/common.css
+++ b/app-server/src/main/webapp/css/common.css
@@ -7,8 +7,8 @@
 }
 
 .error-container {
-    xborder: 1px solid red;
-    width: 800px;
+  xborder: 1px solid red;
+  width: 800px;
 }
 
 /* 헤더 */
@@ -79,6 +79,8 @@ header a {
 
 .header_menu {
   display: flex;
+  margin-bottom: 0;
+  padding-left: 0;
 }
 
 .header_menu li {
@@ -91,6 +93,7 @@ header a {
   font-size: 12px;
   
 }
+
 .header_menu li a:hover {
   color: darkgrey;
   box-shadow: inset 0 -2px darkgrey;
@@ -101,6 +104,8 @@ header a {
  display: flex;
  box-sizing: border-box;
  border-left: 2px solid darkgrey;
+ margin-bottom: 0;
+ padding-left: 0;
 }
 
 .header_login li {
@@ -109,44 +114,44 @@ header a {
 }
 
 @media screen and (max-width: 768px) {
-  header {
-    flex-direction: column;
-    align-self: start;
-    padding: 5px 0;
-  }
+ header {
+   flex-direction: column;
+   align-self: start;
+   padding: 5px 0;
+ }
 
-  .header_logo {
-    margin: 0;
-    width: 100%;
-    text-align: center;
-    padding-bottom: 5px;
-    border-bottom: 1px solid black;
-  }
-  
-  .header_menu {
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-  }
+ .header_logo {
+   margin: 0;
+   width: 100%;
+   text-align: center;
+   padding-bottom: 5px;
+   border-bottom: 1px solid black;
+ }
+ 
+ .header_menu {
+   flex-direction: column;
+   align-items: center;
+   width: 100%;
+ }
 
-  .header_menu li {
-    width: 100%;
-    text-align: center;
-  }
+ .header_menu li {
+   width: 100%;
+   text-align: center;
+ }
 
-  .header_login {
-    justify-content: center;
-    width: 100%;
-  }
+ .header_login {
+   justify-content: center;
+   width: 100%;
+ }
 
-  .header_login li {
-    text-align: center;
-    margin: 4px;
-  }
+ .header_login li {
+   text-align: center;
+   margin: 4px;
+ }
 
-  .header_login li a {
-    padding: 10px;
-  }
+ .header_login li a {
+   padding: 10px;
+ }
 }
 
 .template-content {
@@ -154,7 +159,6 @@ header a {
 }
 
 /* content */
-
 .template-wrap {
 	width: 100%;
 }
@@ -164,15 +168,6 @@ header a {
 	margin: 0 auto;
 	background-color: white;
 }
-
-/* .template-top {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  position: relative;
-  width: 100%;
-  background-color: orange;
-} */
 
 .template-wrap .template-top {
   width: 1200px;
@@ -186,8 +181,8 @@ header a {
 
 /*footer 시작*/
 footer {
-width: 100%;
-background-color: whitesmoke;
+	width: 100%;
+	background-color: whitesmoke;
 }
 
 .footer_background {
@@ -195,7 +190,7 @@ background-color: whitesmoke;
   position: inherit;
   z-index:-99;
   width: 1200px;
-  height:190px;
+  height:200px;
   margin: 0 auto;
   bottom: 0;
   left: 0;
@@ -203,36 +198,35 @@ background-color: whitesmoke;
 
 .footer_company {
   display: flex;
-  margin: 0 0 0 20px;
+  margin: 0 0 0 0;
   padding: 15px 0 0 0;
   justify-content: center;
 }
 
 .footer_company .footer_li {
-list-style-type: none;
+  list-style-type: none;
 }
 
-.footer_company .footer_li .footer_a{
-  padding: 2px 10px 2px 0;
+.footer_company .footer_li .footer_a {
+  padding: 2px 10px 2px 10px;
   font-size: 10px;
   text-decoration: none;
   color: black;
 }
 
 .footer_address {
-  margin-left: 20px;
+	
 }
 
 .footer_address > p {
-    margin: 0;
-    padding: 4px;
-    text-align: center;
-    font-size: 10px;
+  margin: 0;
+  padding: 4px;
+  text-align: center;
+  font-size: 10px;
 }
+
 .footer_copyright {
   margin:0px;
-  margin-left: 20px;
-  padding-bottom: 10px;
   text-align: center;
   font-size: 10px;
 }
