--- a/app-server/src/main/webapp/css/common.css
+++ b/app-server/src/main/webapp/css/common.css
@@ -11,6 +11,21 @@
   width: 800px;
 }
 
+body::-webkit-scrollbar {
+    width: 10px;
+  }
+body::-webkit-scrollbar-thumb {
+  background-color: rgb(247, 231, 215);
+  border-radius: 10px;
+  background-clip: padding-box;
+  border: 2px solid transparent;
+  }
+body::-webkit-scrollbar-track {
+  background-color: rgb(250, 250, 234);
+  border-radius: 10px;
+  box-shadow: inset 0px 0px 5px white;
+  }
+
 /* 헤더 */
 ol, ul, li {
   margin: 0;
