--- a/app-server/src/main/webapp/css/common.css
+++ b/app-server/src/main/webapp/css/common.css
@@ -128,11 +128,19 @@ header a {
 }
 
 @media screen and (max-width: 768px) {
- header {
-   flex-direction: column;
+	
+	header {
+  width: 100%;
+}
+
+.header_background {
+  width: 1200px;
+  flex-direction: column;
    align-self: start;
    padding: 5px 0;
- }
+  margin: 0 auto;
+  background-color: white;
+}
 
  .header_logo {
    margin: 0;
