1116 commit header 드롭메뉴 수정중

--- a/app-server/src/main/webapp/css/common.css
+++ b/app-server/src/main/webapp/css/common.css
@@ -97,18 +97,17 @@ header a {
   padding-left: 0;
 }
 
-.header_menu li {
+.header_menu > li {
   font-size: 14px;
   padding: 8px 34px;
 }
 
-.header_menu li a {
+.header_menu > li a {
   padding: 4px;
   font-size: 12px;
-  
 }
 
-.header_menu li a:hover {
+.header_menu > li a:hover {
   color: darkgrey;
   box-shadow: inset 0 -2px darkgrey;
   line-height: 20px;
