--- a/app-server/src/main/webapp/css/calstyle.css
+++ b/app-server/src/main/webapp/css/calstyle.css
@@ -112,6 +112,6 @@
   width: 100%;
   padding: 20px 0 20px 0px;
   font-weight: bold;
-  background-color: rgb(247, 231, 215);
+  xbackground-color: rgb(247, 231, 215);
   text-align: center;
 }
