1119 push MyStudyList 수정 완료 / MyStudyDetail 수정 중

--- a/app-server/src/main/webapp/css/study/css/vertical-layout-light/style.css
+++ b/app-server/src/main/webapp/css/study/css/vertical-layout-light/style.css
@@ -13392,7 +13392,7 @@ input[type="button"].btn-block {
   display: block;
 }
 
-.navbar {
+/* .navbar {
   position: relative;
   display: flex;
   flex-wrap: wrap;
@@ -13772,7 +13772,7 @@ input[type="button"].btn-block {
 
 .navbar-dark .navbar-text a:hover, .navbar-dark .navbar-text a:focus {
   color: #fff;
-}
+} */
 
 .card {
   position: relative;
