1119 push 관리자 유저 부분 재수정 완료

--- a/app-server/src/main/webapp/css/admin/assets/css/material-dashboard.css
+++ b/app-server/src/main/webapp/css/admin/assets/css/material-dashboard.css
@@ -7228,7 +7228,7 @@ textarea.form-control-lg {
   color: #f0f2f5 !important; }
 
 .text-dark {
-  color: #344767 !important; }
+  color: #4e4847 !important; }
 
 .text-white {
   color: #fff !important; }
@@ -15365,7 +15365,7 @@ hr.horizontal {
       border-radius: 0.875rem; }
   .nav.nav-pills .nav-link {
     z-index: 3;
-    color: #344767;
+    color: #4e4847;
     border-radius: 0.5rem;
     background-color: inherit; }
     .nav.nav-pills .nav-link.active {
