1119 push MyStudyDetail 하는중,,,,,,,,,,,,,,,,,,,,,,,,,,,,,

--- a/app-server/src/main/webapp/css/assets/css/style.css
+++ b/app-server/src/main/webapp/css/assets/css/style.css
@@ -9,7 +9,7 @@
 # General
 --------------------------------------------------------------*/
 body {
-  background: #fbf2ee59;
+  background: #ffffff;
   color: #444;
   font-family: "Open Sans", sans-serif;
 }
