1119 push member,askBoard,calendar 스타일 적용 중..

--- a/app-server/src/main/webapp/css/calstyle.css
+++ b/app-server/src/main/webapp/css/calstyle.css
@@ -30,10 +30,9 @@
   justify-content: space-between;
   align-items: center;
 }
-
 .year-month {
   font-size: 25px;
-  color: navy;
+  color: green;
 }
 
 .nav {
@@ -112,7 +111,7 @@
   width: 30px;
   height: 30px;
   display: block;
-  background-color: orange;
+  background-color: green;
   border-radius: 50%;
   content: '';
 }
