--- a/app-server/src/main/webapp/css/calstyle.css
+++ b/app-server/src/main/webapp/css/calstyle.css
@@ -4,7 +4,7 @@
   font-family: sans-serif;
   box-sizing: border-box;
 }
-   .all-content {
+   .xall-content {
   width: 100%;
   max-width: 900px;
   margin: 0 auto;
