--- a/app-server/src/main/webapp/css/calendar/core/main.css
+++ b/app-server/src/main/webapp/css/calendar/core/main.css
@@ -260,12 +260,12 @@ temporary rendered events).
   font-size: 0.85em;
   line-height: 1.4;
   border-radius: 3px;
-  border: 1px solid #fcf8e3; 
+  border: 1px solid #3788d8;
 }
 
 .fc-event,
 .fc-event-dot {
-  background-color: #fcf8e3;
+  background-color: #3788d8;
   /* default BACKGROUND color */
 }
 
